- Fixed block cursor on IE8 (partial work towards solving #24)

--- a/codeplay.css
+++ b/codeplay.css
@@ -146,7 +146,7 @@
 /* Use a block cursor in REPL to differentiate from normal editors */
 #repl .CodeMirror-cursor {
   width: 0.5ex;
-  background-color: rgba(0,0,0,0.3);
+  background-color: #9a9a9a;
   border: none;
 }
 
